--- a/shortcodes.html
+++ b/shortcodes.html
@@ -550,3 +550,14 @@
     <script type="text/javascript" src="js/main.js"></script>   
 </body>
 </html>
+
+<!-- 
+
+[heading]Hi this a text for testing the shortCode hmmmm..[/heading]
+
+[icon name="cog"  size="30"][/icon]
+
+[img height=" 100%"  width="100% "  class="img-responsive" ]http://cimages.prvd.com/is/image/ProvideCommerce/PF_15_R118X2_MINIMAL_NOGYP_NOFERN_VA1104_W1_SQ?$PFCProductImage$[/img]
+
+
+ -->
